--- a/_posts/2019-11-18-abc132-e.md
+++ b/_posts/2019-11-18-abc132-e.md
@@ -10,11 +10,11 @@ description: グラフの構築
 ---
 
 ## [ABC132-E Hopscotch Addict](https://atcoder.jp/contests/abc132/tasks/abc132_e)
+
 ### 概要
 有向グラフ`G(N, M)`が与えられ, グラフ上を一度の移動で3頂点進む. 頂点Sから頂点Tまで移動できる場合の最短経路を求める.
 
-$2 \leq N \leq 10^5$,
-$0 \leq M \leq min(10^5, N(N-1))$
+$2 \leq N \leq 10^5, 0 \leq M \leq min(10^5, N(N-1))$
 
 ### 考察
 頂点Sから頂点Tの経路かつ経路長が3の倍数であるもののうち, 最短のものを求めたい.
@@ -59,15 +59,18 @@ $0 \leq M \leq min(10^5, N(N-1))$
 ### 解答
 遷移した回数を`v`として, `0, 1, 2, 0, 1, ...`の状態は `v % 3`で管理した.
 
-```rust
+```rust[class="line-numbers"][data-file="e.rs"]
 use std::io;
 use std::collections::VecDeque;
 
+/// head comment
 fn main() {
     let (n, m) = {
         let i = read::<usize>();
         (i[0], i[1])
     };
+
+    // line comment
     let mut g = vec![Vec::new(); n];
     for _ in 0..m {
         let (u, v) = {
