--- a/_posts/2019-11-18-abc132-e.md
+++ b/_posts/2019-11-18-abc132-e.md
@@ -14,11 +14,33 @@ description: グラフの構築
 ### 概要
 有向グラフ`G(N, M)`が与えられ, グラフ上を一度の移動で3頂点進む. 頂点Sから頂点Tまで移動できる場合の最短経路を求める.
 
-$2 \leq N \leq 10^5, 0 \leq M \leq min(10^5, N(N-1))$
+$$2 \leq N \leq 10^5, 0 \leq M \leq min(10^5, N(N-1))$$
 
 ### 考察
 頂点Sから頂点Tの経路かつ経路長が3の倍数であるもののうち, 最短のものを求めたい.
 長さが3の倍数であるという制約を扱うために, 以下のようにグラフに遷移状態をもたせる.
+
+```html
+<div class="graph">
+  <div class="edge">A</div>
+    <div class="node" />
+  <div class="edge">B</div>
+    <div class="node" />
+  <div class="edge">C</div>
+    <div class="node" />
+  <div class="edge">D</div>
+</div>
+
+<div class="graph">
+  <div class="edge">A, 0</div>
+    <div class="node" />
+  <div class="edge">B, 1</div>
+    <div class="node" />
+  <div class="edge">C, 2</div>
+    <div class="node" />
+  <div class="edge">D, 0</div>
+</div>
+```
 
 このようにすることで`(A, 0) => (D, 0)`のパスの長さが3となる.  
 ここで`D → A`のパスがあると仮定すると, 二週目は以下のようになる.
