add graph & styling

--- a/_posts/2019-11-18-abc132-e.md
+++ b/_posts/2019-11-18-abc132-e.md
@@ -20,39 +20,43 @@ $$2 \leq N \leq 10^5, 0 \leq M \leq min(10^5, N(N-1))$$
 頂点Sから頂点Tの経路かつ経路長が3の倍数であるもののうち, 最短のものを求めたい.
 長さが3の倍数であるという制約を扱うために, 以下のようにグラフに遷移状態をもたせる.
 
-```html
-<div class="graph">
-  <div class="edge">A</div>
-    <div class="node" />
-  <div class="edge">B</div>
-    <div class="node" />
-  <div class="edge">C</div>
-    <div class="node" />
-  <div class="edge">D</div>
+<div class="graph-wrapper">
+  <div class="graph">
+    <div class="edge">A</div>
+    <div class="node"></div>
+    <div class="edge">B</div>
+    <div class="node"></div>
+    <div class="edge">C</div>
+    <div class="node"></div>
+    <div class="edge">D</div>
+  </div>
 </div>
 
-<div class="graph">
-  <div class="edge">A, 0</div>
-    <div class="node" />
-  <div class="edge">B, 1</div>
-    <div class="node" />
-  <div class="edge">C, 2</div>
-    <div class="node" />
-  <div class="edge">D, 0</div>
+<div>
+  <div class="graph">
+    <div class="edge">A, 0</div>
+    <div class="node"></div>
+    <div class="edge">B, 1</div>
+    <div class="node"></div>
+    <div class="edge">C, 2</div>
+    <div class="node"></div>
+    <div class="edge">D, 0</div>
+  </div>
 </div>
-```
 
 このようにすることで`(A, 0) => (D, 0)`のパスの長さが3となる.  
 ここで`D → A`のパスがあると仮定すると, 二週目は以下のようになる.
 
-<div class="graph">
-  <div class="edge">D, 0</div>
-    <div class="node" />
-  <div class="edge">A, 1</div>
-    <div class="node" />
-  <div class="edge">B, 2</div>
-    <div class="node" />
-  <div class="edge">C, 0</div>
+<div class="graph-wrapper">
+  <div class="graph">
+    <div class="edge">D, 0</div>
+    <div class="node"></div>
+    <div class="edge">A, 1</div>
+    <div class="node"></div>
+    <div class="edge">B, 2</div>
+    <div class="node"></div>
+    <div class="edge">C, 0</div>
+  </div>
 </div>
 
 よって`(A, 0) => (D, 0) => (C, 0)`のパスが制約のもとで存在することがわかる.  
@@ -103,3 +107,37 @@ fn main() {
     else { println!("-1"); }
 }
 ```
+
+<style>
+.graph-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.graph {
+  margin: 2rem 0;
+  font-size: 0.8rem;
+  display: flex;
+  justify-content: center;
+}
+
+.graph .edge {
+  position: relative;
+  z-index: 0;
+  background: #98971a;
+  width: 2.5rem;
+  height: 2.5rem;
+  border-radius: 50%;
+  text-align: center;
+  line-height: 2.5rem;
+}
+
+.graph .node {
+  position: relative;
+  width: 2rem;
+  height: 1.2rem;
+  border-bottom: 1.5px solid #7c6f64;
+  text-align: center;
+}
+</style>
